--- a/fontend/signin.html
+++ b/fontend/signin.html
@@ -46,13 +46,13 @@
 
             <div class="inputpass1">
                 <p>Password</p>
-             <input type="text" name="password1" id="signuppass1"  autocomplete="off">
+             <input type="password" name="password1" id="signuppass1"  autocomplete="off">
              <small class="passvalid"></small>
             </div>
 
             <div class="inputpass2">
                 <p>Confirm Password</p>
-             <input type="text" name="password2" id="signuppass2" autocomplete="off">
+             <input type="password" name="password2" id="signuppass2" autocomplete="off">
              <small class="confirmpassvalid"></small>
              
             </div>
