--- a/fontend/contact.html
+++ b/fontend/contact.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="text">
-      <a href="http://localhost:5000/home"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="/home"><i class="fa-solid fa-arrow-left"></i></a>
       <div class="paragraphs">
         <h2>About Us</h2>
         <p>
