--- a/fontend/login.html
+++ b/fontend/login.html
@@ -48,7 +48,7 @@
                 
                 <input type="checkbox" id="inputC"><label for="inputC">remember me</label>
 
-                <p><a href="http://localhost:5000/forget">forget password?</a></p>
+                <p><a href="/forget">forget password?</a></p>
              </div>
 
              <button class="submit">Login</button>
@@ -63,10 +63,10 @@
            
             <p class="hl"><span>OR</span></p>
 
-            <p class="tosignin">dont have account?<a href="http://localhost:5000/register">Register</a></p>
+            <p class="tosignin">dont have account?<a href="/register">Register</a></p>
 
             <div class="social">
-            <a href="http://localhost:5000/register"><img src="./images/login/to login.png" loading="lazy"></a>
+            <a href="/register"><img src="./images/login/to login.png" loading="lazy"></a>
             </div>
     </div>
 </body>
