--- a/fontend/home.html
+++ b/fontend/home.html
@@ -39,14 +39,14 @@
         </li>
 
         <li class="nav-list">
-            <a href="http://localhost:5000/needs" class="nav-link">
+            <a href="https://second-year-project.onrender.com/needs" class="nav-link">
                 <i class="fa fa-star-o" aria-hidden="true"></i>
                 <span class="nav-text">Needs</span>
             </a>
         </li>
 
         <li class="nav-list">
-            <a href="http://localhost:5000/wants" class="nav-link">
+            <a href="https://second-year-project.onrender.com/wants" class="nav-link">
                 <i class="fa-regular fa-heart"></i>
                 <span class="nav-text">Wants</span>
             </a>
@@ -64,7 +64,7 @@
 
 
         <li class="nav-list">
-            <a href="http://localhost:5000/aboutUs" class="nav-link">
+            <a href="https://second-year-project.onrender.com/aboutUs" class="nav-link">
                 <i class="fa-solid fa-user-tie"></i>
                 <span class="nav-text">About</span>
                 <span class="nav-text">Us</span>
@@ -72,7 +72,7 @@
         </li>
 
         <li class="nav-list">
-            <a href="http://localhost:5000/transaction" class="nav-link">
+            <a href="https://second-year-project.onrender.com/transaction" class="nav-link">
                 <i class="fa-solid fa-hand-holding-dollar"></i>
                 <span class="nav-text">Transaction</span>
             </a>
