changes in href for deployment

--- a/fontend/needItemUpdate.html
+++ b/fontend/needItemUpdate.html
@@ -31,11 +31,11 @@
   </head>
   <body>
     <div class="higher">
-      <a href="http://localhost:5000/home" class="link">
+      <a href="/home" class="link">
         <img src="./images/homepage/Image 5.png" loading="lazy" />
         <span class="nav-text">Finance 360</span>
       </a>
-      <a href="http://localhost:5000/needs" class="arrow"
+      <a href="/needs" class="arrow"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
     </div>
