--- a/fontend/transaction.html
+++ b/fontend/transaction.html
@@ -15,10 +15,13 @@
     <script src="
     https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js
     "></script>
-    <link href="
+    <link
+      href="
     https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css
-    " rel="stylesheet">
-    
+    "
+      rel="stylesheet"
+    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
@@ -29,9 +32,7 @@
     <div class="outer">
       <div class="top">
         <div class="top-left">
-          <a href="http://localhost:5000/home"
-            ><i class="fa-solid fa-arrow-left"></i
-          ></a>
+          <a href="/home"><i class="fa-solid fa-arrow-left"></i></a>
           <input type="date" />
         </div>
 
@@ -57,9 +58,7 @@
         </div>
       </div>
 
-      <div class="main">
-   
-      </div>
+      <div class="main"></div>
     </div>
   </body>
   <script src="./scripts/transaction.js"></script>
