--- a/fontend/want.html
+++ b/fontend/want.html
@@ -31,20 +31,20 @@
   <body>
     <aside>
       <div class="logo">
-        <a href="http://localhost:5000/home" class="nav-link">
+        <a href="/home" class="nav-link">
           <img src="./images/homepage/Image 5.png" loading="lazy" />
           <span class="nav-text">Finance</span>
           <span class="nav-text">360</span>
         </a>
       </div>
 
-      <a href="http://localhost:5000/home"
+      <a href="/home"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
 
       <div class="createCategory">
         <p>Categories</p>
-        <a href="http://localhost:5000/addcategory"
+        <a href="/addcategory"
           ><i class="fa-solid fa-plus" style="color: #f6f6f6"></i
         ></a>
       </div>
