--- a/redirect/auth.html
+++ b/redirect/auth.html
@@ -64,13 +64,13 @@
   <h1>Please Login Again</h1>
   <p>Redirecting to Login in 5 seconds...</p>
   <div class="layout">
-    <a href="http://localhost:5000" class="redirect-link" id="redirectLink">Login</a>
+    <a href="https://second-year-project.onrender.com" class="redirect-link" id="redirectLink">Login</a>
   </div>
 </div>
 
 <script>
 function redirect(){
-    window.location.href='http://localhost:5000';
+    window.location.href='https://second-year-project.onrender.com';
 }
 
 setTimeout(()=>{
