--- a/redirect/page404.html
+++ b/redirect/page404.html
@@ -50,8 +50,8 @@
         <p>"Do you mind taking a moment to check out Finance 360 while you're here?"</p>
         <p>Here is a link to bring you back on track:</p>
         <p>
-            <a href="http://localhost:5000/register" class="btn">Register</a> | 
-            <a href="http://localhost:5000/" class="btn">Login</a> 
+            <a href="/register" class="btn">Register</a> | 
+            <a href="https://second-year-project.onrender.com" class="btn">Login</a> 
         </p>
     </div>
 </body>
