--- a/redirect/password.html
+++ b/redirect/password.html
@@ -51,13 +51,13 @@
   <h1>Password Changed</h1>
   <p>Redirecting to the login page in 3 seconds...</p>
   <div class="layout">
-    <a href="http://localhost:5000" class="redirect-link" id="redirectLink">Sign In</a>
+    <a href="https://second-year-project.onrender.com" class="redirect-link" id="redirectLink">Sign In</a>
   </div>
 </div>
 
 <script>
 function redirect() {
-    window.location.href = 'http://localhost:5000';
+    window.location.href = 'https://second-year-project.onrender.com';
 }
 
 setTimeout(() => {
