--- a/redirect/userExist.html
+++ b/redirect/userExist.html
@@ -45,13 +45,13 @@
 <div class="redirect-container">
   <h1>User already exist ! please Login</h1>
   <p>Redirecting to login page in 3 seconds...</p>
-  <a href="http://localhost:5000" class="redirect-link" id="redirectLink">Click here to redirect back immediately</a>
+  <a href="https://second-year-project.onrender.com" class="redirect-link" id="redirectLink">Click here to redirect back immediately</a>
 </div>
 
 <script>
   // Function to redirect back
   function redirectToBack() {
-    window.location.href = 'http://localhost:5000/'; // Replace 'your_back_url_here' with the actual URL you want to redirect to
+    window.location.href = 'https://second-year-project.onrender.com'; // Replace 'your_back_url_here' with the actual URL you want to redirect to
   }
 
   
