--- a/redirect/codeError.html
+++ b/redirect/codeError.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=http://localhost:5000/forgetMyPass/verify">
+    <meta http-equiv="refresh" content="5;url=forgetMyPass/verify">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <style>
