--- a/redirect/serverErr.html
+++ b/redirect/serverErr.html
@@ -34,12 +34,12 @@
     <div class="error-container">
         <h1>Oops! Something went wrong.</h1>
         <p>We're sorry, but there was an error processing your request.</p>
-        <p>Please <a href="http://localhost:5000">click here</a> to return to the login page.</p>
+        <p>Please <a href="https://second-year-project.onrender.com">click here</a> to return to the login page.</p>
     </div>
 
     <script>
         setTimeout(function() {
-            window.location.href = "http://localhost:5000";
+            window.location.href = "https://second-year-project.onrender.com";
         }, 3000);
     </script>
 </body>
