--- a/fontend/login.html
+++ b/fontend/login.html
@@ -63,10 +63,10 @@
            
             <p class="hl"><span>OR</span></p>
 
-            <p class="tosignin">dont have account?<a href="https://second-year-project.onrender.com/register">Register</a></p>
+            <p class="tosignin">dont have account?<a href="http://localhost:5000/register">Register</a></p>
 
             <div class="social">
-            <a href="https://second-year-project.onrender.com/register"><img src="./images/login/to login.png" loading="lazy"></a>
+            <a href="http://localhost:5000/register"><img src="./images/login/to login.png" loading="lazy"></a>
             </div>
     </div>
 </body>
